# applied_artificial_intelligence

./: pyproject.toml
src/exam_preparation/: image_detection.ipynb  machine_learning.ipynb  others.ipynb  pretrained_model.ipynb  time_series.ipynb
src/utils/: bindigits.py
src/week_10/: Retrieve_VGG16 classes_w.ipynb  Simple_VGG16_w.ipynb  vgg19_w.ipynb  wordnet_w.ipynb
src/week_2/: AAA_AAB_0002_0001_MLPClassifier.py
src/week_2/datasets/: Dataset2.csv  Dataset2_Miss_Anomaly.csv  Dataset3.csv  Dataset4.csv  water_potability_Anomaly_Missing_Duplicates.csv
src/week_3/Datasets/: Dataset1.csv  Regression1.csv  Regression2.csv  Regression3.csv  Regression4.csv
src/week_3/Machine learning/: Comparing Methods.ipynb  Dataset3_Accuracy.ipynb  Dataset3_Accuracy_Cross_Folding.ipynb  Dummy_OneHot_MinMax_ZScore_crossValidation.ipynb  Python Week 2 - Basics.ipynb  Week 3 - preprocessing.ipynb  (+6 more)
src/week_5/: ACO_FromScratch.ipynb  GA - Existing functions.ipynb  GA_FromScratch.ipynb  PSO_ExistingFunction.ipynb  PSO_FromScratch.ipynb
src/week_7/: Assignment_8_Alexander_Schulz.ipynb
src/week_8/: 01_Image_processing_w.ipynb  Car_classification_CNN_v1_w.ipynb  Edge_detection_Canny_Hetwitt_w.ipynb  Edge_detection_roberts_w.ipynb  Edge_detection_sobel_w.ipynb  Face_DetectionAndCounting_CNN_w.ipynb  Fashion MNIST_w.ipynb  Flattened_w.ipynb  Image segmentation 5_w.ipynb  Image_denoising_CNN_v2_w.ipynb  MNIST_CNN_Begin_w.ipynb  MNIST_FlatteningNN_begin_w.ipynb  MNIST_Keras_w.ipynb  Noise_saltandPepper_Add_w.ipynb  Noise_saltandPepper_remove_w.ipynb  Tumor_Detection_CNN_v1_w.ipynb  Tumor_Detection_CNN_v2_smallerAndFaster_w.ipynb
src/week_9/: CIFAR dataset-CNN-U.ipynb
(+50 files in other folders)
