[tool.poetry]
name = "week 2"
version = "0.1.0"
description = ""
authors = ["a-schulz <schulz.alexander2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
mealpy = "^2.5.2"
keras = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
