[tool.poetry]
name = "applied-artificial-intelligence"
version = "0.1.0"
description = "Code for course applied ai from the university of applied sciences dresden."
authors = ["a-schulz <schulz.alexander2002@gmail.com>"]
readme = "README.md"
packages = [{include = "applied_artificial_intelligence"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
opencv-python = "^4.8.0.74"
nltk = "^3.8.1"
python-utils = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
